[metadata]
name = MoniSenForest
version = attr: MoniSenForest.__version__
description = Tool for handling MoniSen Forest data
long_description = file: README.md
Home-page: https://github.com/kohyamat/MoniSenForest
Author: Tetsuo I. Kohyama
Author-email: tetsuo.kohyama@gmail.com
keywords = ecosystem monitoring, tree inventory, litterfall
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.7
install_requires =
    numpy
    openpyxl

[options.package_data]
MoniSenForest = suppl_data/*json

[options.entry_points]
console_scripts =
    monisenforest = MoniSenForest.app:main
