[metadata]
name = MoniSenForest
version = attr: MoniSenForest.__version__
description = Tool for handling forest plot data of the Monitoring Sites 1000 Project
long_description = file: README.md
Home-page: https://github.com/MoniSenNC/MoniSenForest
Author: Tetsuo I. Kohyama
Author-email: tetsuo.kohyama@gmail.com
keywords = tree-inventory, tree-census-data, litterfall-data
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
packages = find:
python_requires = >= 3.6
install_requires =
    dataclasses;python_version=='3.6'
    numpy
    openpyxl

[options.package_data]
MoniSenForest = 
    suppl_data/*json
    suppl_data/*md
    icons/*.png
    icons/*.svg

[options.entry_points]
console_scripts =
    monisenforest = MoniSenForest.app:main
